fix: spacing on various components

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -106,10 +106,10 @@
 
 .textContainer {
   flex: 1;
-  padding: 30px;
   border-radius: 15px;
   margin: 0px 100px;
   font-size: 1.2rem;
+  border: 1px solid red;
 }
 
 .textContainer h2 {
@@ -172,7 +172,9 @@
 .portfolioContainer{
   width: 80%;
   text-align: center;
+  align-items: center;
   font-size: 1.2rem;
+  border: 1px solid red;
 }
 
 .buttonContainer {
