--- a/src/styles/projectsPreview.module.css
+++ b/src/styles/projectsPreview.module.css
@@ -1,5 +1,6 @@
 .projectContainer {
   display: flex;
+  align-items: center;
   flex-direction: row;
   flex-wrap: wrap; 
   justify-content: space-evenly;
